# kolla-kubernetes

./: .coveragerc  .gitignore  .gitreview  .testr.conf  CONTRIBUTING.rst  Dockerfile  HACKING.rst  README.rst  a.patch  babel.cfg  bindep.txt  lower-constraints.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.zuul.d/: ansible-orch.yml  legacy.yaml  legacy.yml
ansible/: certificates.yml  deploy.yml  destroy.yml  site.yml  tmp-README
ansible/group_vars/: all.yml
ansible/inventory/: kubernetes  multinode
bootstrap/glance/: glance-job.yml.j2
bootstrap/keystone/: keystone-job.yml.j2  keystone-job.yml.j2.rej
contrib/: README.rst
devtools/: Dockerfile  README.rst  cleanup-k8s.sh  cleanup-kolla.sh  install-k8s.sh  start-kolla-p1.sh  start-kolla-p2.sh  start-kolla-p3.sh
helm/: all_values.yaml
kolla_kubernetes/: __init__.py  app.py  config.py  exception.py  kube_service_status.py  pathfinder.py  service.py  service_definition.py  service_resources.py  status.py  utils.py  version.py
kolla_kubernetes.egg-info/: requires.txt
operator/: controller.py  kubernetes_operator.py  service_operator.py
operators/: Dockerfile  controller.py  kubernetes_operator.py  service_operator.py
orchestration/: README.md  deploy.yml
services/: WARNING  WARNING.rst
specs/: README.rst  ansible-deployment.rst  helm-deployment.rst  kolla-kubernetes-arch.rst  kolla-kubernetes-service-discovery.rst  kolla-kubernetes-service-exposure.rst  kubernetes-deployment.rst
tests/: configmap-monitor.yaml  test_build.py
tools/: 0001-Comment-out-placement-in-kolla-kubernetes-gate.patch  0001-Fixes-problem-with-kolla-kubernetes-3.0.2-images.patch  Dockerfile  build_dev_image.sh  build_example_yaml.py  build_helm_templates.sh  build_local_admin_keystonerc.sh  build_orch_image.sh  build_packages.py  build_packages.sh  busybox.yml  clean_kolla_labels.sh  cleanup-k8s.sh  create_openrc.sh  deploy_aio.sh  fix-mitaka-config.py  generate-configuration  generate_passwords.py  get_arch.sh  helm-re-version.sh  helm_build_all.sh  helm_build_compute_kits.py  helm_build_microservices.py  helm_build_services.py  helm_buildall.sh  helm_buildrepo.sh  helm_prebuild.py  helm_prebuild_compute_kits.py  helm_prebuild_microservices.py  helm_prebuild_services.py  helm_versions.sh  init-runonce  ko.py  kolla-kubernetes.py  kolla_kubernetes.py  prechecks.py  pull_containers.sh  run_dev_env.sh  run_dev_image.sh  secret-generator.py  (+23 more)
(+1528 files in other folders)
