[metadata]
name = kolla-kubernetes
summary = Kubernetes deployment of the Kolla containers
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/kolla-kubernetes
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    kolla_kubernetes
data_files =
    share/kolla-kubernetes/services = services/*
    share/kolla-kubernetes/etc_examples = etc/*
    share/kolla-kubernetes/ansible = ansible/*

[entry_points]
console_scripts =
    kolla-kubernetes = kolla_kubernetes.app:main
    kolla-kubernetes-genpwd = kolla_kubernetes.commands.genpwd:main
    kollakube = kolla_kubernetes.app:main_kube

kolla_kubernetes.cli =
    bootstrap =  kolla_kubernetes.commands.cmd_service:Bootstrap
    run =  kolla_kubernetes.commands.cmd_service:Run
    kill =  kolla_kubernetes.commands.cmd_service:Kill
    resource = kolla_kubernetes.commands.cmd_resource:Resource
    resource-template = kolla_kubernetes.commands.cmd_resource:ResourceTemplate
    resource-map = kolla_kubernetes.commands.cmd_resource:ResourceMap

kolla_kube.cli =
    map = kolla_kubernetes.commands.cmd_resource:ResourceMap
    resource = kolla_kubernetes.commands.cmd_resource:Resource
    res = kolla_kubernetes.commands.cmd_resource:Resource
    tmpl = kolla_kubernetes.commands.cmd_resource:Template
    template = kolla_kubernetes.commands.cmd_resource:Template

[pbr]

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = kolla-kubernetes/locale
domain = kolla-kubernetes

[update_catalog]
domain = kolla-kubernetes
output_dir = kolla-kubernetes/locale
input_file = kolla-kubernetes/locale/kolla-kubernetes.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = kolla-kubernetes/locale/kolla-kubernetes.pot

[wheel]
universal = true
